--- a/views/shows/index.ejs
+++ b/views/shows/index.ejs
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Shows Page</title>
+    <title><%= shows.name %> Page</title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            <% for (let idx = 0; idx < shows.length; idx++) { %> <% const show = shows[idx] %>
+                <img src="<%= show.image %>" alt="" />
+            <% } %> 
+        </div>
+    </main>
 </body>
 </html>
