--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= shows.name %> Page</title>
+    <title>All Shows Page</title>
 </head>
 <body>
-    <main>
-        <div>
-            <% for (let idx = 0; idx < shows.length; idx++) { %> <% const show = shows[idx] %>
-                <img src="<%= show.image %>" alt="" />
-            <% } %> 
-        </div>
-    </main>
+    
 </body>
 </html>
