changed user route controller to use '/users' instead of '/user' in server file

--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Shows Page</title>
+    <title><%= req.params.name %> </title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            <img src="<%= req.params.image %>" alt="" />
+        </div>
+    </main>
 </body>
 </html>
