Updated episodes to pull series name from personal db - hardcoded temporarily

--- a/views/episodes/show.ejs
+++ b/views/episodes/show.ejs
@@ -5,6 +5,7 @@
     <body>
         <main>
             <div>
+                <a href="/shows/<%=episode.parentShow._id%>"><h1>The Show Name is: <%=episode.parentShow.name%></h1></a>
                 <h2><%=episode.name%></h2>
                 <img src="<%= episode.image %>" alt="" />
                 <p><%=episode.description%></p>
