Added extra div classes to manage styling

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,10 +11,14 @@
                     <form action="/login" method="POST">
                         <div>
                             <label for="username">username</label>
+                            <div class="input-field">
                             <input type="text" id="username" />
+                            </div>
                         </div>
                             <label for="username">password</label>
+                            <div class="input-field"></div>
                             <input type="password" id="password" />
+                        </div>
                         </div>
                         <!-- ADD BUTTON TO SUBMIT AFTER AUTH IS SET UP -->
                     </form>
