--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -11,23 +11,33 @@
                     <form action="/register" method="POST">
                         <div>
                             <label for="username">username</label>
-                            <input type="text" id="username" />
+                            <div class="input-field">
+                                <input type="text" id="username" />
+                            </div>
                         </div>
                         <div>
                             <label for="username">email</label>
-                            <input type="email" id="email" />
+                            <div class="input-field">
+                                <input type="email" id="email" />
+                            </div>
                         </div>
                         <div>
                             <label for="username">birthdate</label>
-                            <input type="text" id="dob" placeholder="YYYY, MM, DD" />
+                            <div class="input-field">
+                                <input type="text" id="dob" placeholder="YYYY, MM, DD" />
+                            </div>
                         </div>
                         <div>
                             <label for="username">password</label>
-                            <input type="password" id="password" />
+                            <div class="input-field">
+                                <input type="password" id="password" />
+                            </div>
                         </div>
                         <div>
                             <label for="username">confirm password</label>
-                            <input type="password" id="password" />
+                            <div class="input-field">
+                                <input type="password" id="password" />
+                            </div>
                         </div>
                         <!-- ADD BUTTON TO SUBMIT AFTER AUTH IS SET UP -->
                     </form>
