--- a/views/partials/head/_head.ejs
+++ b/views/partials/head/_head.ejs
@@ -3,6 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="/styles/main.css" />
+
     <% if ( typeof page !== 'undefined' ) { %>
     <title>quelue - <%= page %></title>
     <% } else { %>
