set up nav bar partial and inserted the partial in all ejs pages

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,3 +6,17 @@ img {
 .thumbnail {
     width: 200px;
 }
+
+.navbar {
+    background-color: #1B2021;
+}
+
+.navbar-item-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.navbar-item {
+    color: #2F73A7;
+    font-size: 30px;
+}
