--- a/views/episodes/index.ejs
+++ b/views/episodes/index.ejs
@@ -3,6 +3,7 @@
 <%- include('../partials/head/_head', { page: 'Episodes' }) %>
 
     <body>
+        <%- include('../partials/navbar/_navbar') %>
         <main>
             <div>
                 <% for (let idx=0; idx < episodes.length; idx++) { %>
