--- a/views/episodes/show.ejs
+++ b/views/episodes/show.ejs
@@ -3,6 +3,7 @@
 <%- include('../partials/head/_head', { page: 'Episode' }) %>
 
     <body>
+        <%- include('../partials/navbar/_navbar') %>
         <main>
             <div>
                 <a href="/shows/<%=episode.parentShow._id%>"><h1><%=episode.parentShow.name%></h1></a>
