--- a/views/shows/index.ejs
+++ b/views/shows/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <%- include('../partials/head/_head', { page: 'Shows' }) %> 
 <body>
+    <%- include('../partials/navbar/_navbar') %>
     <main>
         <div>
             <% for (let idx = 0; idx < shows.length; idx++) { %> <% const show = shows[idx] %>
