--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -4,6 +4,7 @@
 <%- include('../partials/head/_head', { page: show.name }) %> 
     
 <body>
+    <%- include('../partials/navbar/_navbar') %>
     <main>
         <div>
             <a href="/shows/<%= show._id %>"><h1></h1></a>
