--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -3,6 +3,7 @@
 <%- include('../partials/head/_head', { page: user.username }) %>
 
     <body>
+        <%- include('../partials/navbar/_navbar') %>
         <main>
             <div>
                 <h1>Homepage</h1>
