--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -8,6 +8,9 @@
         <div>
             <a href="/shows/<%= show._id %>"><h1></h1></a>
             <img src="<%= show.image %>" alt="" />
+            <form action="/user" method="POST">
+                <input type="button" name="showQueue" value="Add to queue"/>
+            </form>
         </div>
         <div>
             <% for (let idx=0; idx < episodes.length; idx++) { %>
