--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -9,8 +9,10 @@
         <div>
             <a href="/shows/<%= show._id %>"><h1></h1></a>
             <img src="<%= show.image %>" alt="" />
-            <form action="/user" method="POST">
-                <input type="button" name="showQueue" value="Add to queue"/>
+            <form action="/shows" method="POST">
+                <!-- <input type="button" name="showQueue" value="Add to queue"/> -->
+                <input hidden name="name" value="<%= show._id %>" />
+                <button type="submit">Add to queue</button>
             </form>
         </div>
         <div>
