added confirm password function to register POST, changed register.ejs to accomodate registration route

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -20,7 +20,9 @@
                             <input type="password" id="password" />
                         </div>
                         </div>
-                        <!-- ADD BUTTON TO SUBMIT AFTER AUTH IS SET UP -->
+                        <div>
+                            <button>Submit</button>
+                        </div>
                     </form>
                 </div>
 
