--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -12,34 +12,48 @@
                         <div>
                             <label for="username">username</label>
                             <div class="input-field">
-                                <input type="text" id="username" />
+                                <input 
+                                type="text"
+                                name="username" id="username" 
+                                />
                             </div>
                         </div>
                         <div>
                             <label for="username">email</label>
                             <div class="input-field">
-                                <input type="email" id="email" />
+                                <input 
+                                type="email"
+                                name="email" id="email" 
+                                />
                             </div>
                         </div>
                         <div>
                             <label for="username">birthdate</label>
                             <div class="input-field">
-                                <input type="text" id="dob" placeholder="YYYY, MM, DD" />
+                                <input 
+                                type="date" name="dob"
+                                id="dob" placeholder="YYYY, MM, DD" 
+                                />
                             </div>
                         </div>
                         <div>
                             <label for="username">password</label>
                             <div class="input-field">
-                                <input type="password" id="password" />
+                                <input type="password"
+                                name="password" id="password" 
+                                />
                             </div>
                         </div>
                         <div>
                             <label for="username">confirm password</label>
                             <div class="input-field">
-                                <input type="password" id="password" />
+                                <input
+                                name="passwordTwo" type="password" id="password" />
                             </div>
                         </div>
-                        <!-- ADD BUTTON TO SUBMIT AFTER AUTH IS SET UP -->
+                        <div>
+                            <button>Submit</button>
+                        </div>
                     </form>
                 </div>
 
