--- a/views/partials/head/_head.ejs
+++ b/views/partials/head/_head.ejs
@@ -2,7 +2,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- IF WE NEED JQUERY -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="/styles/main.css" />
 
     <% if ( typeof page !== 'undefined' ) { %>
