successful login now sends user to their homepage

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -12,12 +12,20 @@
                         <div>
                             <label for="username">username</label>
                             <div class="input-field">
-                            <input type="text" id="username" />
+                            <input 
+                            type="text" 
+                            name="username"
+                            id="username" 
+                            />
                             </div>
                         </div>
                             <label for="username">password</label>
                             <div class="input-field"></div>
-                            <input type="password" id="password" />
+                            <input 
+                            type="password" 
+                            name="password"
+                            id="password" 
+                            />
                         </div>
                         </div>
                         <div>
