--- a/views/partials/navbar/_navbar.ejs
+++ b/views/partials/navbar/_navbar.ejs
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <div class="navbar-item-container">
         <a class="navbar-item" href="/shows">All Shows</a>
+        <a class="navbar-item" href="/users/<%= user.id %>"><%= user.username %> </a>
         <!-- <a class="navbar-item" href="/users/< %= user._id %>">Homepage</a> -->
     </div>
 </nav>
