--- a/views/shows/show.ejs
+++ b/views/shows/show.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('../partials/head/_head', { page: show.name }) %> 
+<%- include('../partials/head/_head', { page: 'Show' }) %> 
     
 <body>
     <%- include('../partials/navbar/_navbar') %>
