--- a/views/auth/edit.ejs
+++ b/views/auth/edit.ejs
@@ -1,54 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('../partials/head/_head', { page: 'Register' }) %>
+<%- include('../partials/head/_head', { page: 'Edit Profile' }) %>
 
     <body>
         <main>
             <div id="acccount-box">
-                <h3>Watch your favorite TV shows for free</h3>
-                <h3>Register for an account today!</h3>
+                <h3>Make changes to your account</h3>
                 <div class="account-form">
-                    <form action="/register" method="POST">
+                    <form action="/edit?_method=PUT" method="POST"> 
                         <div>
                             <label for="username">username</label>
                             <div class="input-field">
-                                <input 
-                                type="text"
-                                name="username" id="username" 
-                                />
+                                <input type="text" name="username" id="username" />
                             </div>
                         </div>
                         <div>
                             <label for="username">email</label>
                             <div class="input-field">
-                                <input 
-                                type="email"
-                                name="email" id="email" 
-                                />
+                                <input type="email" name="email" id="email" />
                             </div>
                         </div>
                         <div>
                             <label for="username">birthdate</label>
                             <div class="input-field">
-                                <input 
-                                type="date" name="dob"
-                                id="dob" placeholder="YYYY, MM, DD" 
-                                />
+                                <input type="date" name="dob" id="dob" placeholder="YYYY, MM, DD" />
                             </div>
                         </div>
                         <div>
                             <label for="username">password</label>
                             <div class="input-field">
-                                <input type="password"
-                                name="password" id="password" 
-                                />
+                                <input type="password" name="password" id="password" />
                             </div>
                         </div>
                         <div>
                             <label for="username">confirm password</label>
                             <div class="input-field">
-                                <input
-                                name="passwordTwo" type="password" id="password" />
+                                <input name="passwordTwo" type="password" id="password" />
                             </div>
                         </div>
                         <div>
