--- a/views/partials/navbar/_navbar.ejs
+++ b/views/partials/navbar/_navbar.ejs
@@ -1,7 +1,8 @@
 <nav class="navbar">
     <div class="navbar-item-container">
-        <a class="navbar-item" href="/shows">All Shows</a>
-        <a class="navbar-item" href="/users/<%= user.id %>"><%= user.username %> </a>
+        <p class="nav-brand">quelue</p>
+        <a class="nav-main" href="/shows">All Shows</a>
+        <a class="nav-user" href="/users/<%= user.id %>"><%= user.username %> </a>
         <!-- <a class="navbar-item" href="/users/< %= user._id %>">Homepage</a> -->
     </div>
 </nav>
