--- a/views/auth/edit.ejs
+++ b/views/auth/edit.ejs
@@ -11,7 +11,7 @@
                         <div>
                             <label for="username">username</label>
                             <div class="input-field">
-                                <input type="text" name="username" id="username" />
+                                <input type="text" name="username" id="username" value="<%= user.name %> />
                             </div>
                         </div>
                         <div>
