--- a/views/auth/edit.ejs
+++ b/views/auth/edit.ejs
@@ -7,35 +7,30 @@
             <div id="acccount-box">
                 <h3>Make changes to your account</h3>
                 <div class="account-form">
-                    <form action="/edit?_method=PUT" method="POST"> 
+                    <form action='/<%= user.id %>/edit?_method=PUT' method="POST"> 
                         <div>
                             <label for="username">username</label>
                             <div class="input-field">
-                                <input type="text" name="username" id="username" value="<%= user.name %> />
+                                <input type="text" name="username" id="username" value="<%= user.username %>" />
                             </div>
                         </div>
                         <div>
-                            <label for="username">email</label>
+                            <label for="email">email</label>
                             <div class="input-field">
-                                <input type="email" name="email" id="email" />
+                                <input type="email" name="email" id="email"
+                                value="<%= user.email %>" />
                             </div>
                         </div>
                         <div>
-                            <label for="username">birthdate</label>
-                            <div class="input-field">
-                                <input type="date" name="dob" id="dob" placeholder="YYYY, MM, DD" />
-                            </div>
-                        </div>
-                        <div>
-                            <label for="username">password</label>
+                            <label for="password">password</label>
                             <div class="input-field">
                                 <input type="password" name="password" id="password" />
                             </div>
                         </div>
                         <div>
-                            <label for="username">confirm password</label>
+                            <label for="passwordTwo">confirm password</label>
                             <div class="input-field">
-                                <input name="passwordTwo" type="password" id="password" />
+                                <input name="passwordTwo" type="password" id="passwordTwo" />
                             </div>
                         </div>
                         <div>
