--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -19,7 +19,7 @@
                             </div>
                         </div>
                         <div>
-                            <label for="username">email</label>
+                            <label for="email">email</label>
                             <div class="input-field">
                                 <input 
                                 type="email"
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                         <div>
-                            <label for="username">birthdate</label>
+                            <label for="dob">birthdate</label>
                             <div class="input-field">
                                 <input 
                                 type="date" name="dob"
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <div>
-                            <label for="username">password</label>
+                            <label for="password">password</label>
                             <div class="input-field">
                                 <input type="password"
                                 name="password" id="password" 
@@ -45,10 +45,10 @@
                             </div>
                         </div>
                         <div>
-                            <label for="username">confirm password</label>
+                            <label for="passwordTwo">confirm password</label>
                             <div class="input-field">
                                 <input
-                                name="passwordTwo" type="password" id="password" />
+                                name="passwordTwo" type="password" id="passwordTwo" />
                             </div>
                         </div>
                         <div>
