--- a/views/auth/edit.ejs
+++ b/views/auth/edit.ejs
@@ -7,7 +7,7 @@
             <div id="acccount-box">
                 <h3>Make changes to your account</h3>
                 <div class="account-form">
-                    <form action="/<%= user.id %>/edit?_method=PUT" method="POST"> 
+                    <form action="/<%= user.id %>?_method=PUT" method="POST"> 
                         <div>
                             <p><%= user.id %></p>
                             <label for="username">username</label>
@@ -38,6 +38,9 @@
                             <button type="submit">Submit</button>
                         </div>
                     </form>
+                    <form action="/<%= user.id %>_method=DELETE" method="POST">
+                        <button type="submit">Delete Profile</button>
+                    </form> 
                 </div>
             </div>
         </main>
