--- a/views/auth/edit.ejs
+++ b/views/auth/edit.ejs
@@ -9,7 +9,6 @@
                 <div class="account-form">
                     <form action="/<%= user.id %>?_method=PUT" method="POST"> 
                         <div>
-                            <p><%= user.id %></p>
                             <label for="username">username</label>
                             <div class="input-field">
                                 <input type="text" name="username" id="username" value="<%= user.username %>" />
@@ -38,7 +37,7 @@
                             <button type="submit">Submit</button>
                         </div>
                     </form>
-                    <form action="/<%= user.id %>_method=DELETE" method="POST">
+                    <form action="/<%= user.id %>?_method=DELETE" method="POST">
                         <button type="submit">Delete Profile</button>
                     </form> 
                 </div>
