added edit profile button to nav bar

--- a/views/auth/edit.ejs
+++ b/views/auth/edit.ejs
@@ -3,6 +3,7 @@
 <%- include('../partials/head/_head', { page: 'Edit Profile' }) %>
 
     <body>
+        <%- include('../partials/navbar/_navbar') %>
         <main>
             <div id="acccount-box">
                 <h3>Make changes to your account</h3>
