--- a/views/partials/navbar/_navbar.ejs
+++ b/views/partials/navbar/_navbar.ejs
@@ -3,6 +3,7 @@
         <p class="nav-brand">quelue</p>
         <a class="nav-main" href="/shows">All Shows</a>
         <a class="nav-user" href="/users/<%= user.id %>"><%= user.username %></a>
+        <a class="" href="/<%= user.id %>/edit">Edit Profile</a>
         <!-- <a class="navbar-item" href="/users/< %= user._id %>">Homepage</a> -->
     </div>
 </nav>
