--- a/views/episodes/show.ejs
+++ b/views/episodes/show.ejs
@@ -11,7 +11,7 @@
                 <img src="<%= episode.image %>" alt="" />
                 <p><%=episode.description%></p>
                 <p>Runtime: <%=episode.runtime%> minutes</p>
-                <form action="/users/61087e63a52d95573687ff93?_method=PUT" method="POST">
+                <form action="/users/<%= user.id %>?_method=PUT" method="POST">
                     <input hidden name="episodeName" value="<%= episode._id %>" />
                     <button type="submit">Like this Episode</button>
                 </form>
