--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,14 +15,14 @@ body {
   box-sizing: border-box;
 }
 
-img {
-  width: 600px;
-  height: auto;
-}
+// img {
+//   width: 600px;
+//   height: auto;
+// }
 
-.thumbnail {
-  width: 200px;
-}
+// .thumbnail {
+//   width: 200px;
+// }
 
 #navbar {
   padding: 20px;
@@ -69,8 +69,56 @@ img {
   }
 }
 
-.queue-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 40px;
+main {
+  width: 80%;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.index-page {
+  color: white;
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+  .index-header {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+
+  .index-boxes-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 40px;
+    justify-items: center;
+  }
+
+  img {
+    width: 250px;
+  }
+}
+
+.user-queue-index {
+  @extend .index-page;
+
+  button {
+    border: none;
+    background-color: white;
+    color: $warn-color;
+    padding: 10px 15px;
+    border-radius: 20px;
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+
+  button:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+  }
 }
