--- a/views/shows/index.ejs
+++ b/views/shows/index.ejs
@@ -5,7 +5,7 @@
     <%- include('../partials/navbar/_navbar') %>
     <main>
         <div class="index-page">
-            <h1 class="index-header">Discover TV Shows</h1>
+            <h1 class="index-header">DISCOVER TV SHOWS</h1>
             <div class="index-boxes-container">
                     <% for (let idx = 0; idx < shows.length; idx++) { %> <% const show = shows[idx] %>
                     <div class="index-boxes">
