--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -13,7 +13,7 @@
                 <p>Email: <%= user.email %></p>
             </div>
             <article class="user-queue-index">
-                <h1>MY QUEUE</h1>
+                <h1 class="index-header">MY QUEUE</h1>
                 <div class="index-boxes-container">
                     <% for (let i = 0; i < user.showQueue.length; i++) { %>
                         <% const queue = user.showQueue[i] %>
