added get route for password error on register page, added another ejs page to render when passwords don't match

--- a/views/auth/register_password_error.ejs
+++ b/views/auth/register_password_error.ejs
@@ -50,6 +50,7 @@
                                 <input
                                 name="passwordTwo" type="password" id="passwordTwo" />
                             </div>
+                            <p>Passwords do not match</p>
                         </div>
                         <div>
                             <button>Submit</button>
