--- a/views/partials/head/_head.ejs
+++ b/views/partials/head/_head.ejs
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <!-- <script src="/scripts/app.js" defer></script> -->
 
     <% if ( typeof page !== 'undefined' ) { %>
     <title>quelue - <%= page %></title>
