--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,3 @@
-h1 {
-  letter-spacing: 0.15em;
-}
-
 body {
   font-family: "Montserrat", sans-serif;
   color: #000;
@@ -57,6 +53,9 @@ main {
 
 .index-page, .user-queue-index {
   color: white;
+}
+.index-page h1, .user-queue-index h1 {
+  letter-spacing: 0.15em;
 }
 .index-page a, .user-queue-index a {
   color: white;
