--- a/views/partials/navbar/_navbar.ejs
+++ b/views/partials/navbar/_navbar.ejs
@@ -6,14 +6,20 @@
         <a class="nav-main" href="/users/<%= user.id %>">HOME</a></span>
         <a class="nav-main" href="/shows">ALL SHOWS</a>
     </div>
-
     <div class="nav-user-links">
         <span class="nav-user-padding">
-        <a href="/users/<%= user.id %>">
-            <%= user.username %></a>
+            <a href="/users/<%= user.id %>">
+                <%= user.username %></a>
             </span>
-        <a href="/<%= user.id %>/edit">Edit Profile</a>
-    </div>
-
+            <a href="/<%= user.id %>/edit">Edit Profile</a>
+        </div>
+        
+        <div class="">
+            <form action="/logout" method="POST">
+                <div>
+                    <button type="submit">Logout</button>
+                </div>
+            </form>
+        </div>
     <!-- <a class="navbar-item" href="/users/< %= user._id %>">Homepage</a> -->
 </nav>
