created login_password_error.ejs file and added redirect route to the error page if the password doesn't match on login page

--- a/views/auth/login_password_error.ejs
+++ b/views/auth/login_password_error.ejs
@@ -34,7 +34,7 @@
                         </div>
                     </form>
                 </div>
-
+                <p>Password is incorrect</p>
                 <div>
                     <a href="/register">Don't have an account? Register for free.</a>
                 </div>
