--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,23 @@ body {
   box-sizing: border-box;
 }
 
+#error-text {
+  visibility: hidden;
+}
+
+.logout-button {
+  border: none;
+  background-color: white;
+  color: $secondary-color;
+  font-size: 16px;
+  font-family: $body-font-stack;
+  height: 15px;
+}
+
+.logout-button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
 // img {
 //   width: 600px;
 //   height: auto;
@@ -28,7 +45,7 @@ body {
   font-weight: bold;
   color: $secondary-color;
   display: grid;
-  grid-template-columns: 200px 1fr 200px;
+  grid-template-columns: 200px 1fr 250px;
   justify-items: center;
   align-items: center;
 
@@ -114,7 +131,6 @@ main {
     padding: 10px 15px;
     border-radius: 20px;
     text-transform: uppercase;
-    font-size: 12px;
   }
 
   button:hover {
