--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -5,13 +5,13 @@
     <body>
         <%- include('../partials/navbar/_navbar') %>
         <main>
-            <div>
+            <!-- <div>
                 <h1>Homepage</h1>
                 <h2>Username: <%= user.username %></h2>
                
                 <p>DOB: <%= user.dob %></p>
                 <p>Email: <%= user.email %></p>
-            </div>
+            </div> -->
             <article class="user-queue-index">
                 <h1 class="index-header">MY QUEUE</h1>
                 <div class="index-boxes-container">
